tests/comp/sem/invalid/two_args_with_same_name.mj
class A {

	public void test(int x /***, int x ***/) {
	}

	public static void main(String[] args) {
	}

}
